--- a/MultiSelects/MultiSelects/Views/Shared/Toolbar.cshtml
+++ b/MultiSelects/MultiSelects/Views/Shared/Toolbar.cshtml
@@ -11,6 +11,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                <li>@Html.ActionLink("Native", "Display", "NativeSelect")</li>
             </ul>
         </div>
     </div>
