--- a/MultiSelects/MultiSelects/Views/Shared/Toolbar.cshtml
+++ b/MultiSelects/MultiSelects/Views/Shared/Toolbar.cshtml
@@ -12,6 +12,7 @@
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Home", "Index", "Home")</li>
                 <li>@Html.ActionLink("Native", "Display", "NativeSelect")</li>
+                <li>@Html.ActionLink("Bootstrap", "Display", "BootstrapSelect")</li>
             </ul>
         </div>
     </div>
